--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@react-navigation/stack": "^6.0.7",
     "date-fns": "^2.23.0",
     "expo": "~42.0.1",
+    "expo-image-picker": "^10.2.3",
+    "expo-sqlite": "^9.2.1",
     "expo-status-bar": "~1.0.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
