--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "react-native start",
+    "android": "react-native run-android",
+    "ios": "react-native run-ios",
     "web": "expo start --web",
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo/websql": "^1.0.1",
     "@react-native-community/datetimepicker": "^3.5.2",
     "@react-native-masked-view/masked-view": "^0.2.4",
     "@react-navigation/bottom-tabs": "^6.0.5",
@@ -16,12 +16,17 @@
     "@react-navigation/stack": "^6.0.7",
     "date-fns": "^2.23.0",
     "expo": "~42.0.1",
+    "expo-asset": "^8.3.3",
+    "expo-file-system": "^11.1.3",
     "expo-image-picker": "^10.2.3",
+    "expo-splash-screen": "~0.11.2",
     "expo-sqlite": "^9.2.1",
     "expo-status-bar": "~1.0.4",
+    "expo-updates": "~0.8.1",
+    "prop-types": "^15.7.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
+    "react-native": "~0.63.4",
     "react-native-animatable": "^1.3.3",
     "react-native-elements": "^3.4.2",
     "react-native-flash-message": "^0.2.0",
@@ -29,15 +34,22 @@
     "react-native-linear-gradient": "^2.5.6",
     "react-native-picker-select": "^8.0.4",
     "react-native-progress": "^5.0.0",
+    "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.4.0",
+    "react-native-sqlite-storage": "^6.0.1",
+    "react-native-svg": "12.1.1",
+    "react-native-unimodules": "0.14.10",
     "react-native-vector-icons": "^8.1.0",
     "react-native-web": "~0.13.12",
     "uninstall": "^0.0.0",
+    "websql": "^2.0.3",
     "yarn": "^1.22.11"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
   },
-  "private": true
+  "private": true,
+  "name": "rentalZ",
+  "version": "1.0.0"
 }
